--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="./main.js"></script>
+    <h1> hello </h1>
+    
+    <script type="module" src="/JS/main.js"></script>
   </body>
 </html>
