--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title> RPS </title>
   </head>
   <body>
     <h1> hello </h1>
-    
+    <form action="" class="form">
+      <label> How many rounds? </label>
+      <input type="text" class="number" />
+      <button type="submit" class="start">Start Game</button>
+    </form>
+    <div class="container"></div>
+
+
+    <div class="container"></div>
     <script type="module" src="/JS/main.js"></script>
   </body>
 </html>
