--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,14 @@
     <title> RPS </title>
   </head>
   <body>
+    <div class="body">
     <h1> hello </h1>
     <form action="" class="form">
       <label> How many rounds? </label>
       <input type="text" class="number" />
       <button type="submit" class="start">Start Game</button>
     </form>
+  </div>
     <div class="container"></div>
 
 
