--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 
 
     <div class="container"></div>
+    <button type="submit" class="end">End Game</button>
     <script type="module" src="/JS/main.js"></script>
   </body>
 </html>
