--- a/app/index.html
+++ b/app/index.html
@@ -9,17 +9,13 @@
   <body>
     <div class="body">
     <h1> hello </h1>
-    <form action="" class="form">
-      <label> How many rounds? </label>
-      <input type="text" class="number" />
       <button type="submit" class="start">Start Game</button>
     </form>
   </div>
     <div class="container"></div>
 
-
-    <div class="container"></div>
-    <button type="submit" class="end">End Game</button>
+    <div class="endContainer"></div>
+    <button type="submit" class="end"> End Game </button>
     <script type="module" src="/JS/main.js"></script>
   </body>
 </html>
