--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   <button type="submit" class="end"> End Game </button>
     <div class="container"></div>
 
-    <div class="endContainer"></div>
+    <div class="textContainer"></div>
 
     <script type="module" src="/JS/main.js"></script>
   </body>
