--- a/app/index.html
+++ b/app/index.html
@@ -7,14 +7,11 @@
     <title> RPS </title>
   </head>
   <body>
-    <div class="body">
-
-  </div>
-  <button type="submit" class="end"> End Game </button>
+  <button type="submit" class="endButton"> End Game </button>
     <div class="container"></div>
 
     <div class="textContainer"></div>
-
+    <div class="endContainer"></div>
     <script type="module" src="/JS/main.js"></script>
   </body>
 </html>
