--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,8 @@
     <title> RPS </title>
   </head>
   <body>
-  <button type="submit" class="endButton"> End Game </button>
+    <div class="buttonContainer"></div>
     <div class="container"></div>
-
     <div class="textContainer"></div>
     <div class="endContainer"></div>
     <script type="module" src="/JS/main.js"></script>
