--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <div class="buttonContainer"></div>
     <div class="container"></div>
     <div class="textContainer"></div>
+    <div class="textContainerTwo"></div>
     <div class="endContainer"></div>
     <script type="module" src="/JS/main.js"></script>
   </body>
